force-app/main/default/objects/Discount__c/fields/Days_Before_Class__c.field-meta.xml
<CustomField>
    <fullName>Days_Before_Class__c</fullName>
    <label>Early Bird - Days Before Class Start</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>