force-app/main/default/objects/Discount__c/validationRules/Common_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Common_Validation</fullName>
    <active>true</active>
    <description>This validation rule is use to validate end date must be greater than start date.</description>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorMessage>Please input valid information as in end date must be greater than start date and value must be greater than zero.</errorMessage>
</ValidationRule>