force-app/main/default/objects/Discount__c/listViews/All_Active_Discounts.listView-meta.xml
<ListView>
    <fullName>All_Active_Discounts</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Active Discounts</label>
</ListView>